--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 </head>
 <body>
 	
+	<div>
+		<p>每日贡献值</p>
+	</div>
 	<script type="text/javascript">
 		var svg=d3.select("body")
 			.append("svg")
